--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mantine/core": "^8.3.9",
     "@mantine/hooks": "^8.3.9",
     "base64-string": "^1.1.3",
+    "command-line-args": "^6.0.1",
+    "command-line-usage": "^7.0.3",
     "dayjs": "^1.11.19",
     "lua-format": "^1.5.3-c",
     "next": "16.0.6",
@@ -22,6 +24,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/command-line-args": "^5.2.3",
+    "@types/command-line-usage": "^5.0.4",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19",
